fix(mobile screen): hide plans on mobile

--- a/src/components/plans/Plans.css
+++ b/src/components/plans/Plans.css
@@ -89,3 +89,8 @@
     gap: 15px;
   }
 }
+@media screen and (max-width: 882px) {
+  .plans-container {
+    display: none;
+  }
+}
